--- a/spec/index.src.html
+++ b/spec/index.src.html
@@ -24,8 +24,6 @@ Indent: 2
 <section>
   <h2 id="intro">Introduction</h2>
 
-  <em>This section is not normative.</em>
-
   Cookies, as defined by [[RFC6265]], diverge from the web's general security
   policy in a number of ways which may be surprising to implementers and
   authors who haven't carefully read that document's discussion of
@@ -37,8 +35,8 @@ Indent: 2
   and <a href="http://tools.ietf.org/html/rfc6265#section-8.6">"Weak Integrity"</a>
   sections.
 
-  This document describes a mechanism by which servers can opt-in to
-  harmonizing cookies' security policy with the
+  This document extends [[RFC6265]], describing a mechanism by which servers can
+  opt-in to harmonizing cookies' security policy with the
   <a href="https://tools.ietf.org/html/rfc6454#section-3">same-origin policy</a>
   [[!RFC6454]] that web authors know and love. User agents that support these
   "origin cookies" will ignore a <code>Set-Cookie</code> header's value's
@@ -95,5 +93,223 @@ Indent: 2
       Origin-Cookie: SID=31d4d96e407aad42
     </pre>
   </div>
+</section>
 
+<section>
+  <h2 id="server-requirements">Server Requirements</h2>
+</section>
+
+<section>
+  <h2 id="user-agent-requirements">User Agent Requirements</h2>
+
+  This section describes extensions to RFC6265 necessary in order to implement
+  the client-side requirements of the <code>origin</code> attribute and
+  <code>Origin-Cookie</code> header.
+
+  <h3 id="cookie-av-grammar"><code>cookie-av</code> grammar</h3>
+
+  [[RFC6265]] is extended such that the <code>cookie-av</code> token definition
+  is replaced with the following grammar:
+
+  <pre>
+    cookie-av         = expires-av / max-age-av / domain-av /
+                        path-av / secure-av / httponly-av /
+                        origin-av / extension-av
+    origin-av         = "Origin"
+  </pre>
+
+  <h3 id="origin-attribute">The <code>Origin</code> attribute</h3>
+
+  The following attribute definition should be considered part of the
+  the <code>Set-Cookie</code> algorithm as described in Section 5.2 of
+  [[RFC6265]]:
+
+  If the attribute-name case-insensitively matches the string "Origin", the
+  user agent MUST append an attribute to the cookie-attribute-list with an
+  attribute-name of <code>Origin</code> and an empty attribute-value.
+
+  <h3 id="storage-model">Monkey-patching the storage model</h3>
+
+  ISSUE: There's got to be a better way to specify this. Until I figure out
+  what that is, monkey-patching!
+
+  Alter <a href="http://tools.ietf.org/html/rfc6265#section-5.3">Section 5.3
+  of RFC6265</a> as follows:
+
+  <ol>
+    <li>
+      Add <code>origin</code> and <code>origin-flag</code> to the list of fields
+      stored about each cookie.
+    </li>
+    <li>
+      Before step 11 of the current algorithm, add the following:
+
+      <ol start="11">
+        <li>
+          If the <code>cookie-attribute-list</code> contains an attribute
+          with an <code>attribute-name</code> of "Origin":
+         
+          <ol>
+            <li>
+              Set the cookie's <code>domain</code> attribute to the empty
+              string.
+            </li>
+            <li>Set the cookie's <code>http-only-flag</code> to true.</li>
+            <li>Set the cookie's <code>host-only-flag</code> to true.</li>
+            <li>
+              Set the cookie's <code>origin</code> to the origin of
+              <code>request-uri</code>, as defined by
+              <a href="http://tools.ietf.org/html/rfc6454#section-4">Section 4
+              of RFC6454</a>. [[!RFC6454]]
+            </li>
+            <li>Set the cookie's <code>origin-flag</code> to true.</li>
+            <li>
+              Set the cookie's <code>path</code> attribute to the empty string.
+            </li>
+            <li>Set the cookie's <code>secure-only-flag</code> to false.</li>
+          </ol>
+
+          Otherwise: set the cookie's <code>origin-flag</code> to false, and its
+          <code>origin</code> to <code>null</code>.
+        </li>
+        <li>
+          If the newly created cookie's <code>origin-flag</code> is set to true,
+          and the cookie store contains a cookie with the same
+          <code>name</code>, <code>origin</code>, and <code>origin-flag</code>
+          as the newly created cookie:
+          
+          <ol>
+            <li>
+              Let <var>old-cookie</var> be the existing cookie with the same
+              <code>name</code>, <code>origin</code>, and
+              <code>origin-flag</code> as the newly created cookie.
+            </li>
+            <li>
+              Update the <code>creation-time</code> of the newly created cookie
+              to match the <code>creation-time</code> of <var>old-cookie</var>.
+            </li>
+            <li>
+              Remove <var>old-cookie</var> from the cookie store.
+            </li>
+          </ol>
+        </li>
+      </ol>
+    </li>
+    <li>
+      Change the priority order for excess cookie removal to the following:
+
+      <ol>
+        <li>Expired cookies.</li>
+        <li>
+          Cookies whose <code>origin-flag</code> is false that share a
+          <code>domain</code> field with more than a predetermined number of
+          other cookies.
+        </li>
+        <li>
+          Cookies whose <code>origin-flag</code> is true that share a
+          <code>domain</code> field with more than a predetermined number of
+          other cookies.
+        </li>
+        <li>
+          Cookies whose <code>origin-flag</code> is false.
+        </li>
+        <li>
+          All cookies.
+        </li>
+      </ol>
+    </li>
+  </ol>
+</section>
+
+<section>
+  <h3 id="cookie-header">Monkey-patching the <code>Cookie</code> header</h3>
+
+  ISSUE: There's got to be a better way to specify this. Until I figure out
+  what that is, monkey-patching!
+
+  Alter <a href="http://tools.ietf.org/html/rfc6265#section-5.4">Section 5.4
+  of RFC6265</a> as follows:
+
+  <ol>
+    <li>
+      Add the following requirement to step 1's list:
+
+      <ul>
+        <li>The cookie's <code>origin-flag</code> is false.</li>
+      </ul>
+    </li>
+  </ol>
+</section>
+
+<section>
+  <h3 id="origin-cookie-header">The <code>Origin-Cookie</code> header</h3>
+
+  The user agent includes stored cookies whose <code>origin-flag</code> is set
+  in the <code><dfn>Origin-Cookie</dfn></code> request header. When the user
+  agent generates an HTTP request, it MUST NOT attach more than one
+  <code>Origin-Cookie</code> header field.
+
+  A user agent MAY omit the <code>Origin-Cookie</code> header in its entirety.
+  For example, the user agent may wish to block sending cookies during
+  "third-party" requests.
+
+  If the user agent does attach an <code>Origin-Cookie</code> header field to
+  an HTTP request, the user agent MUST send the <code>cookie-string</code> as
+  defined below as the value of the header field.
+
+  The user agent MUST use an algorithm equivalent to the following algorithm
+  to compute the <dfn>cookie-string</dfn> from a cookie store and a
+  <var>request-uri</var>:
+
+  <ol>
+    <li>
+      Let <var>cookie-list</var> be the set of cookies from the cookie store
+      that meets all the following requirements:
+
+      <ul>
+        <li>
+          The cookie's <code>origin-flag</code> is true.
+        </li>
+        <li>
+          The cookie's <code>origin</code> matches the origin of
+          <var>request-uri</var>. [[!RFC6454]]
+        </li>
+        <li>
+          The <code>cookie-string</code> is not being generated for a "non-HTTP"
+          API (as defined by the user agent).
+        </li>
+      </ul>
+    </li>
+    <li>
+      Copy/paste step 2, 3, and 4 from
+      <a href="http://tools.ietf.org/html/rfc6265#section-5.4">"The
+      <code>Cookie</code> header</a>.
+    </li>
+  </ol>
+
+  ISSUE: Split RFC6265's
+  <a href="http://tools.ietf.org/html/rfc6265#section-5.4">"The
+  <code>Cookie</code> header</a> into two pieces: gathering
+  <var>cookie-list</var>, and sorting, updating, and serializing.
+  We can reuse the latter parts here.
+</section>
+
+<section>
+  <h2 id="IANA">IANA Considerations</h2>
+  <dl>
+    <dt>Header field name</dt>
+    <dd>Origin-Cookie</dd>
+
+    <dt>Applicable protocol</dt>
+    <dd>http</dd>
+
+    <dt>Status</dt>
+    <dd>standard</dd>
+
+    <dt>Author/Change controller</dt>
+    <dd>W3C</dd>
+
+    <dt>Specification document</dt>
+    <dd>This specification</dd>
+  </dl>
 </section>
