--- a/spec/index.html
+++ b/spec/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang=en><head>
   <meta content="text/html; charset=utf-8" http-equiv=Content-Type>
-  <title>Mixed Content</title>
+  <title>Origin Cookies</title>
   <style>
 @media print {
   html { margin: 0 !important; }
@@ -543,9 +543,9 @@ span.issue, span.note {
 <body class=h-entry>
 <div class=head>
   <p data-fill-with=logo></p>
-  <h1 class="p-name no-ref" id=title>Mixed Content</h1>
+  <h1 class="p-name no-ref" id=title>Origin Cookies</h1>
   <h2 class="no-num no-toc no-ref heading settled" id=subtitle><span class=content>A Collection of Interesting Ideas,
-    <span class=dt-updated><span class=value-title title=20141020>20 October 2014</span></span></span></h2>
+    <span class=dt-updated><span class=value-title title=20141021>21 October 2014</span></span></span></h2>
   <div data-fill-with=spec-metadata><dl>
 	<dt>This version:
 	<dd><a class=u-url href=https://mikewest.github.io/cake/spec/>https://mikewest.github.io/cake/spec/</a>
