--- a/draft-west-cake-00.html
+++ b/draft-west-cake-00.html
@@ -388,9 +388,10 @@
 <link href="#rfc.section.4.2" rel="Chapter" title="4.2 Paths are ignored"/>
 <link href="#rfc.section.5" rel="Chapter" title="5 IANA Considerations"/>
 <link href="#rfc.section.5.1" rel="Chapter" title="5.1 Origin-Cookie"/>
-<link href="#rfc.references" rel="Chapter" title="6 References"/>
-<link href="#rfc.references.1" rel="Chapter" title="6.1 Normative References"/>
-<link href="#rfc.references.2" rel="Chapter" title="6.2 Informative References"/>
+<link href="#rfc.section.6" rel="Chapter" title="6 Acknowledgements"/>
+<link href="#rfc.references" rel="Chapter" title="7 References"/>
+<link href="#rfc.references.1" rel="Chapter" title="7.1 Normative References"/>
+<link href="#rfc.references.2" rel="Chapter" title="7.2 Informative References"/>
 <link href="#rfc.appendix.A" rel="Chapter" title="A Open Issues"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
@@ -471,9 +472,10 @@
 <li>4.2.   <a href="#rfc.section.4.2">Paths are ignored</a></li>
 <li>5.   <a href="#rfc.section.5">IANA Considerations</a></li>
 <li>5.1.   <a href="#rfc.section.5.1">Origin-Cookie</a></li>
-<li>6.   <a href="#rfc.references">References</a></li>
-<li>6.1.   <a href="#rfc.references.1">Normative References</a></li>
-<li>6.2.   <a href="#rfc.references.2">Informative References</a></li>
+<li>6.   <a href="#rfc.section.6">Acknowledgements</a></li>
+<li>7.   <a href="#rfc.references">References</a></li>
+<li>7.1.   <a href="#rfc.references.1">Normative References</a></li>
+<li>7.2.   <a href="#rfc.references.2">Informative References</a></li>
 <li>Appendix A.   <a href="#rfc.appendix.A">Open Issues</a></li>
 <li><a href="#rfc.authors">Author's Address</a></li>
 
@@ -575,8 +577,10 @@ origin-av         = "Origin"
   <dt>Specification document</dt>
   <dd style="margin-left: 8">This specification (see <a href="#origin-cookie-header-field">Section 3.5</a>)</dd>
 </dl>
-<h1 id="rfc.references"><a href="#rfc.references">6.</a> References</h1>
-<h1 id="rfc.references.1"><a href="#rfc.references.1">6.1.</a> Normative References</h1>
+<h1 id="rfc.section.6"><a href="#rfc.section.6">6.</a> <a href="#acknowledgements" id="acknowledgements">Acknowledgements</a></h1>
+<p id="rfc.section.6.p.1">The origin cookie concept documented here is heavily indebted to and based upon Adam Barth&#8217;s <a href="#draft-abarth-cake-01">[draft-abarth-cake-01]</a> document.</p>
+<h1 id="rfc.references"><a href="#rfc.references">7.</a> References</h1>
+<h1 id="rfc.references.1"><a href="#rfc.references.1">7.1.</a> Normative References</h1>
 <table>
   <tbody>
     <tr>
@@ -611,7 +615,7 @@ origin-av         = "Origin"
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.references.2"><a href="#rfc.references.2">6.2.</a> Informative References</h1>
+<h1 id="rfc.references.2"><a href="#rfc.references.2">7.2.</a> Informative References</h1>
 <table>
   <tbody>
     <tr>
@@ -619,6 +623,12 @@ origin-av         = "Origin"
         <b id="RFC3864">[RFC3864]</b>
       </td>
       <td class="top"><a>Klyne, G.</a>, <a>Nottingham, M.</a> and <a>J. Mogul</a>, "<a href="http://tools.ietf.org/html/rfc3864">Registration Procedures for Message Header Fields</a>", BCP 90, RFC 3864, September 2004.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="draft-abarth-cake-01">[draft-abarth-cake-01]</b>
+      </td>
+      <td class="top"><a>Barth, A.</a>, "<a href="https://tools.ietf.org/html/draft-abarth-cake-01">Origin Cookies</a>", September 2011.</td>
     </tr>
   </tbody>
 </table>
