First-party: Clarify the abstract.

--- a/first-party-cookies/draft-west-first-party-cookies-00.html
+++ b/first-party-cookies/draft-west-first-party-cookies-00.html
@@ -445,7 +445,7 @@
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
 </h1>
-<p>This document updates RFC6265, defining the <samp>First-Party</samp> attribute for cookies, which allows servers to mitigate the risk of cross-site request forgery attacks by asserting that a particular cookie should only be sent in a &#8220;first-party&#8221; context.</p>
+<p>This document updates RFC6265, defining the <samp>First-Party</samp> attribute for cookies, which allows servers to mitigate the risk of cross-site request forgery and related information leakage attacks by asserting that a particular cookie should only be sent in a &#8220;first-party&#8221; context.</p>
 <h1 id="rfc.status">
   <a href="#rfc.status">Status of This Memo</a>
 </h1>
